sass/give.scss
@import "colors";
@import "typography";
@import "icons.data.svg";
@import "filter-styles";
@import "breakpoints";

$embed-body-height: 500px;

html {
  height: 100%;
  width: 100%;
}

body {
  background: #fff;
  box-sizing: border-box;
  color: #222;
  font: normal normal normal #{$font-size-default}/ 1.65 "Open Sans",
    "Helvetica", sans-serif;
  height: 100%;
  margin: 0;
  padding: 0;
  text-rendering: optimizeLegibility;
}

.translated-content {
  display: none; /* hidden until translations load */
}

.embed-main {
  @media (min-width: $breakpoint-md) {
    height: $embed-body-height;
  }
}

.locations-loading {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-top: -30px;
  margin-left: -90px;
  z-index: 1020;
}

footer {
  margin-top: 20px;
  text-align: center;
}

.header-block {
  background: $blue-dark;

  @media (min-width: $breakpoint-md) {
    position: sticky;
    z-index: 1020;
    top: 0;
  }

  .list-stats-reset {
    color: $text-light;
    font-weight: 600;

    .map-action-link {
      color: $text-light;
    }
  }
}

.locations-list {
  height: $embed-body-height;
  overflow-y: scroll;
}

.location {
  padding: 1rem;
  overflow-wrap: break-word;
  font-size: $font-size-small;
  border-bottom: 1px solid $border-gray;
  label,
  h5 {
    font-weight: 600;
  }

  // adds dropdown caret icon to support collapse logic
  & > .d-flex {
    background-image: $icon-dropdown;
    background-repeat: no-repeat;
    background-position: bottom right;
    color: black;
    cursor: pointer;
  }

  .row {
    line-height: $font-size-small;

    p {
      margin-bottom: 0.5rem;
    }
  }

  .map-link {
    color: $blue;
    text-decoration: underline;

    &:not([href]) {
      color: $blue;
      text-decoration: underline;

      &:hover {
        text-decoration: underline;
        cursor: pointer;
        color: #0056b3;
      }
    }
  }
}

.map-container {
  position: relative;
  width: 100%;
  height: $embed-body-height;

  @media (min-width: $breakpoint-md) {
    position: fixed;
    width: 66.66667%;
  }

  #map {
    height: 100%;
    width: 100%;
  }

  #map .label {
    color: #999;
    font-size: 11px;
    font-weight: 400;
    padding: 6px 0 2px 0;
    text-transform: uppercase;
  }

  #map .value {
    font-weight: 400;
  }
}

.navbar-brand {
  display: flex;
  min-height: 100%;
  align-items: center;
  flex-direction: row;
  font-weight: 700;
  text-transform: uppercase;
  height: 54px;
  .icon {
    height: 48px;
    width: 48px;
    padding-right: 8px;
  }
}

.secondarycluster {
  opacity: 0.4;
}

.contact-modal .contact-error {
  font-size: 0.8em;
  color: red;
  text-align: right;
  margin-right: 20px;
}

.contact-modal .contact-success {
  display: none;
  text-align: center;
  height: 5em;
}

.contact-modal #message-text {
  height: 120px;
}

